# rust-openapi-gen

./: .gitignore  .justfile  Cargo.toml  README.md  REFACTORING_PLAN.md  test_with_state.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
machined-openapi-gen-macros/: Cargo.toml
machined-openapi-gen-macros/src/: lib.rs
src/: lib.rs  openapi.rs
src/openapi_tests/: MIGRATION_PLAN.md  README.md  REFACTORING_ANALYSIS.md  SCHEMA_REFERENCES.md  mod.rs
stonehm-macros/src/: lib.rs
