[package]
name = "stonehm"
version = "0.1.3"
edition = "2021"
description = "Automatic OpenAPI 3.0 generation for Axum applications"
license = "MIT"
repository = "https://github.com/melito/stonehm"
readme = "README.md"
keywords = ["openapi", "axum", "api", "documentation", "swagger"]
categories = ["web-programming", "api-bindings"]

[workspace]
members = ["examples/hello_world", "stonehm-macros"]

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["json", "query"] }
tower = "0.5"
tower-service = "0.3"
http = "1.0"
inventory = "0.3"
indexmap = "2.0"
serde_json = "1.0"

# Macros crate
stonehm-macros = { version = "0.1.0", path = "stonehm-macros" }
