[package]
name = "machined-openapi-gen"
version = "0.1.3"
edition = "2021"
description = "Automatic OpenAPI 3.0 generation for Axum applications"
license = "MIT"
repository = "https://github.com/mitchell.mounts/rust-openapi-gen"
readme = "README.md"
keywords = ["openapi", "axum", "api", "documentation", "swagger"]
categories = ["web-programming", "api-bindings"]

[workspace]
members = ["examples/hello_world", "machined-openapi-gen-macros"]

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["json", "query"] }
tower = "0.5"
tower-service = "0.3"
http = "1.0"
inventory = "0.3"
indexmap = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Macros crate
machined-openapi-gen-macros = { version = "0.1.0", path = "machined-openapi-gen-macros" }
