[package]
name = "machined-openapi-gen-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for machined-openapi-gen - automatic OpenAPI generation"
license = "MIT"
repository = "https://github.com/mitchell.mounts/rust-openapi-gen"
keywords = ["openapi", "axum", "api", "documentation", "macros"]
categories = ["web-programming", "api-bindings"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
