[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# schemars = { version = "0.8", features = ["derive"] }
machined-openapi-gen = { path = "../.." }
machined-openapi-gen-macros = { path = "../../machined-openapi-gen-macros" }
http = "1.0"
